# shop_Db

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1a4bfb6e05b2_initial_models.py
src/: main.py
src/analytics/: client_reports.py  sales_report.py
src/analytics/orm/: category_report.py  client_reports.py  sales_report.py
src/analytics/raw_query/: category_report.sql  category_report_only_root.sql  client_report.sql  saled_report.sql
src/core/: config.py
src/db/: base.py  session.py
src/models/: __init__.py  category.py  client.py  order.py  order_item.py  product.py
src/routers/: api.py
src/schemas/: item.py
src/services/: order_items.py
