[project]
name = "shop-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Maniakalochka",email = "prochorwolochoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
